--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -16,21 +16,27 @@
 	<![endif]-->
 
 <!-- jQuery minified and compiled -->
-<script src="http://code.jquery.com/jquery-2.1.3.min.js"></script><!-- Latest compiled and minified CSS -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css"/>
-	
-	<!-- Optional theme -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css"/>
-	
-	<!-- Latest compiled and minified JavaScript -->
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+<script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet"
+    href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" />
+
+<!-- Optional theme -->
+<link rel="stylesheet"
+    href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css" />
+
+<!-- Latest compiled and minified JavaScript -->
+<script
+    src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 
 </head>
 <body>
     <div class="container">
         <h1>Välkommen till Raketavdelningen</h1>
         <div>
-            <img th:src="@{/img/password.jpg}" src="../static/img/password.jpg" />
+            <img th:src="@{/img/password.jpg}"
+                src="../static/img/password.jpg" />
         </div>
     </div>
 </body>
